--- a/script/R/analysis/dynamics.Rmd
+++ b/script/R/analysis/dynamics.Rmd
@@ -90,10 +90,6 @@ if (!require("ggpubr")) {install.packages("ggpubr"); require("ggpubr")}
 # statistics
 if (!require("afex")) {install.packages("afex"); require("afex")}
 if (!require("emmeans")) {install.packages("emmeans"); require("emmeans")}
-
-# ggplots
-theme_set(theme_classic()) 
-theme_update(text = element_text(size = 20, family = "Helvetica Neue LT Std 57 Condensed"), legend.position = "bottom")
 ```
 
 ```{r file, include = FALSE}
@@ -129,17 +125,11 @@ vel_dyn
 ```
 
 ### Plot
-#### Bar chart
-- Error bars show SD of the mean
-
-```{r vel-dyn-bar,  echo = FALSE}
-p_vel_dyn <- ggplot(data = vel_dyn, aes(x = SubNr, y = Mean, fill = Condition)) +
-  geom_bar(stat = "identity", position = position_dodge()) +
-  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
-                width = .2, position = position_dodge(.9)) +
+#### Box plot
+```{r vel-dyn-box,  echo = FALSE}
+ggboxplot(dt_vel_dyn[Subcomponent == "Forte" | Subcomponent == "Piano", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Dynamics") +
   facet_grid(Subcomponent ~ .) +
-  labs(y = "KV (0-127)", subtitle = "KV: Dynamics") + coord_cartesian(ylim = c(40, 100))
-p_vel_dyn
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ## 2. All - group{#vel_dyn_group_all}
@@ -153,6 +143,14 @@ vel_dyn_all
 ```
 
 ### Plot
+#### Scatter plot
+- Error bars show SEM of the mean
+
+```{r vel-dyn-all-scatter, echo = FALSE}
+ggerrorplot(vel_dyn, x = "Condition", y = "Mean", add = c("mean", "mean_se"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Dynamics") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
 #### Box plot
 ```{r vel-dyn-all-box, echo = FALSE}
 vel_dyn_plot <- data.table(subject = vel_dyn[Condition == "teaching"]$SubNr, teaching = vel_dyn[Condition == "teaching"]$Mean, performing = vel_dyn[Condition == "performing"]$Mean, subcomponent = vel_dyn[Condition == "teaching"]$Subcomponent)
@@ -193,21 +191,15 @@ vel_dyn_trial
 ### Plot
 #### Line graph
 ```{r vel-dyn-trial-line-forte, echo = FALSE, fig.height = 4}
-p_vel_dyn_trial_forte <- ggplot(data = vel_dyn_trial[Subcomponent == "Forte"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "KV (0-127)", subtitle = "KV: Dynamics/Forte") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_dyn_trial_forte
+ggline(dt_vel_dyn[Subcomponent == "Forte", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-line-piano, echo = FALSE, fig.height = 4}
-p_vel_dyn_trial_piano <- ggplot(data = vel_dyn_trial[Subcomponent == "Piano"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "KV (0-127)", subtitle = "KV: Dynamics/Piano") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_dyn_trial_piano
+ggline(dt_vel_dyn[Subcomponent == "Piano", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_dyn_group_trial}
@@ -224,60 +216,59 @@ vel_dyn_trial_all
 - Error bars show SEM of the mean
 
 ```{r vel-dyn-trial-all-line-forte, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_dyn_trial[Subcomponent == "Forte"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Forte") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+    scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-dyn-trial-all-line-piano, echo = FALSE}
-ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_dyn_trial[Subcomponent == "Piano"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Dynamics/Piano") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+    scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Dynamics
 ## 1. All - individual{#vel_diff_dyn_ind_all}
 - Average KV-Diff for each participant.
 
-```{r vel-acc-dyn, echo = FALSE}
+```{r vel-diff-dyn, echo = FALSE}
 # For each individual
 vel_diff_dyn <- dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent)]
 vel_diff_dyn
 ```
 
 ### Plot
-#### Bar chart
-- Error bars show SD of the mean
-
-```{r vel-acc-dyn-bar,  echo = FALSE}
-p_vel_diff_dyn <- ggplot(data = vel_diff_dyn, aes(x = SubNr, y = Mean, fill = Condition)) +
-  geom_bar(stat = "identity", position = position_dodge()) +
-  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
-                width = .2, position = position_dodge(.9)) +
+#### Box plot
+```{r vel-diff-dyn-box,  echo = FALSE}
+ggboxplot(dt_vel_diff_dyn[Subcomponent == "FtoP" | Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Dynamics") +
   facet_grid(Subcomponent ~ .) +
-  labs(y = "Difference", subtitle = "KV-Diff: Dynamics")
-p_vel_diff_dyn
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ## 2. All - group{#vel_diff_dyn_group_all}
 - Average KV-Diff for each condition.
 
-```{r vel-acc-dyn-all, echo = FALSE}
+```{r vel-diff-dyn-all, echo = FALSE}
 # Group mean
 vel_diff_dyn_all <- vel_diff_dyn[, .(N = .N, Mean = mean(Mean), SD = mean(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent)]
 vel_diff_dyn_all
 ```
 
 ### Plot
+#### Scatter plot
+- Error bars show SEM of the mean
+
+```{r vel-diff-dyn-all-scatter, echo = FALSE}
+ggerrorplot(vel_diff_dyn, x = "Condition", y = "Mean", add = c("mean", "mean_se"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Dynamics") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
 #### Box plot
-```{r vel-acc-dyn-all-box, echo = FALSE}
+```{r vel-diff-dyn-all-box, echo = FALSE}
 vel_diff_dyn_plot <- data.table(subject = vel_diff_dyn[Condition == "teaching"]$SubNr, teaching = vel_diff_dyn[Condition == "teaching"]$Mean, performing = vel_diff_dyn[Condition == "performing"]$Mean, subcomponent = vel_diff_dyn[Condition == "teaching"]$Subcomponent)
 
-ggpaired(vel_diff_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Dynamics") +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed", ) +
-  theme(legend.position = "none")
+ggpaired(vel_diff_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Dynamics") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed", )
 ```
 
 ### Statistics
@@ -311,21 +302,15 @@ vel_diff_dyn_trial
 ### Plot
 #### Line graph
 ```{r vel-diff-dyn-trial-line-ftop, echo = FALSE, fig.height = 4}
-p_vel_diff_dyn_trial_ftop <- ggplot(data = vel_diff_dyn_trial[Subcomponent == "FtoP"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "Difference", subtitle = "KV-Diff: Dynamics/Forte to Piano") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_diff_dyn_trial_ftop
+ggline(dt_vel_diff_dyn[Subcomponent == "FtoP", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-dyn-trial-line-ptof, echo = FALSE, fig.height = 4}
-p_vel_diff_dyn_trial_ptof <- ggplot(data = vel_diff_dyn_trial[Subcomponent == "PtoF"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "Difference", subtitle = "KV-Diff: Dynamics/Piano to Forte") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_diff_dyn_trial_ptof
+ggline(dt_vel_diff_dyn[Subcomponent == "PtoF", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_diff_dyn_group_trial}
@@ -342,17 +327,15 @@ vel_diff_dyn_trial_all
 - Error bars show SEM of the mean
 
 ```{r vel-diff-dyn-trial-all-line-ftop, echo = FALSE}
-ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_diff_dyn_trial[Subcomponent == "FtoP"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Forte to Piano") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-dyn-trial-all-line-ptof, echo = FALSE}
-ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_diff_dyn_trial[Subcomponent == "PtoF"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Dynamics/Piano to Forte") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity (KV) - Articulation
@@ -366,17 +349,11 @@ vel_art
 ```
 
 ### Plot
-#### Bar chart
-- Error bars show SD of the mean
-
-```{r vel-art-bar,  echo = FALSE}
-p_vel_art <- ggplot(data = vel_art, aes(x = SubNr, y = Mean, fill = Condition)) +
-  geom_bar(stat = "identity", position = position_dodge()) +
-  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
-                width = .2, position = position_dodge(.9)) +
+#### Box plot
+```{r vel-art-box,  echo = FALSE}
+ggboxplot(dt_vel_art[Subcomponent == "Legato" | Subcomponent == "Staccato", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "KV (0-127)", title = "KV: Articulation") +
   facet_grid(Subcomponent ~ .) +
-  labs(y = "KV (0-127)", subtitle = "KV: Articulation") + coord_cartesian(ylim = c(40, 100))
-p_vel_art
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ## 2. All - group{#vel_art_group_all}
@@ -389,13 +366,20 @@ vel_art_all
 ```
 
 ### Plot
+#### Scatter plot
+- Error bars show SEM of the mean
+
+```{r vel-art-all-scatter, echo = FALSE}
+ggerrorplot(vel_art, x = "Condition", y = "Mean", add = c("mean", "mean_se"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Articulation") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
 #### Box plot
 ```{r vel-art-all-box, echo = FALSE}
 vel_art_plot <- data.table(subject = vel_art[Condition == "teaching"]$SubNr, teaching = vel_art[Condition == "teaching"]$Mean, performing = vel_art[Condition == "performing"]$Mean, subcomponent = vel_art[Condition == "teaching"]$Subcomponent)
 
 ggpaired(vel_art_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV: Articulation") +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed", ) +
-  theme(legend.position = "none")
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ### Statistics
@@ -429,21 +413,15 @@ vel_art_trial
 ### Plot
 #### Line graph
 ```{r vel-art-trial-line-legato, echo = FALSE, fig.height = 4}
-p_vel_art_trial_legato <- ggplot(data = vel_art_trial[Subcomponent == "Legato"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "KV (0-127)", subtitle = "KV: Articulation/Legato") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_art_trial_legato
+ggline(dt_vel_art[Subcomponent == "Legato", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-art-trial-line-staccato, echo = FALSE, fig.height = 4}
-p_vel_art_trial_staccato <- ggplot(data = vel_art_trial[Subcomponent == "Staccato"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "KV (0-127)", subtitle = "KV: Articulation/Staccato") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_art_trial_staccato
+ggline(dt_vel_art[Subcomponent == "Staccato", .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_art_group_trial}
@@ -460,17 +438,15 @@ vel_art_trial_all
 - Error bars show SEM of the mean
 
 ```{r vel-art-trial-all-line-legato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_art_trial[Subcomponent == "Legato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Legato") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-art-trial-all-line-staccato, echo = FALSE}
-ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_art_trial[Subcomponent == "Staccato"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "KV (0-127)", title = "KV: Articulation/Staccato") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 # Key Velocity Difference (Difference) - Articulation{#vel_articulation}
@@ -484,17 +460,11 @@ vel_diff_art
 ```
 
 ### Plot
-#### Bar chart
-- Error bars show SD of the mean
-
-```{r vel-diff-art-bar,  echo = FALSE}
-p_vel_diff_art <- ggplot(data = vel_diff_art, aes(x = SubNr, y = Mean, fill = Condition)) +
-  geom_bar(stat = "identity", position = position_dodge()) +
-  geom_errorbar(aes(ymin = Mean - SD, ymax = Mean + SD),
-                width = .2, position = position_dodge(.9)) +
+#### Box plot
+```{r vel-diff-art-box,  echo = FALSE}
+ggboxplot(dt_vel_diff_art[Subcomponent == "LtoS" | Subcomponent == "StoL", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Difference", title = "KV-Diff: Articulation") +
   facet_grid(Subcomponent ~ .) +
-  labs(y = "Difference", subtitle = "KV-Diff: Articulaion")
-p_vel_diff_art
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ## 2. All - group{#vel_diff_art_group_all}
@@ -507,13 +477,20 @@ vel_diff_art_all
 ```
 
 ### Plot
+#### Scatter plot
+- Error bars show SEM of the mean
+
+```{r vel-diff_art-all-scatter, echo = FALSE}
+ggerrorplot(vel_diff_art, x = "Condition", y = "Mean", add = c("mean", "mean_se"), error.plot = "errorbar", color = "Condition", facet.by = "Subcomponent", palette = "aaas", xlab = "Condition", ylab = "Difference", title = "KV-Diff: Articulation") +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+```
+
 #### Box plot
 ```{r vel-diff-art-all-box, echo = FALSE}
 vel_diff_art_plot <- data.table(subject = vel_diff_art[Condition == "teaching"]$SubNr, teaching = vel_diff_art[Condition == "teaching"]$Mean, performing = vel_diff_art[Condition == "performing"]$Mean, subcomponent = vel_diff_art[Condition == "teaching"]$Subcomponent)
 
 ggpaired(vel_diff_art_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KV (0-127)", title = "KV-Diff: Articulation") +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed", ) +
-  theme(legend.position = "none")
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
 ```
 
 ### Statistics
@@ -540,28 +517,22 @@ pairs(emmeans(vel_diff_art_aov,~Condition|Subcomponent), adjust = "tukey")
 
 ```{r vel-diff-art-trial, echo = FALSE}
 # For each individual
-vel_diff_art_trial <- dt_vel_diff_art[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent, TrialNr)]
+vel_diff_art_trial <- dt_vel_diff_art[Subcomponent == "LtoS" | Subcomponent == "StoL", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Subcomponent, TrialNr)]
 vel_diff_art_trial
 ```
 
 ### Plot
 #### Line graph
 ```{r vel-diff-artt-rial-line-ltos, echo = FALSE, fig.height = 4}
-p_vel_diff_art_trial_ltos <- ggplot(data = vel_diff_art_trial[Subcomponent == "LtoS"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "Difference", subtitle = "KV-Diff: Articulation/Legato to Staccato") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_diff_art_trial_ltos
+ggline(dt_vel_diff_art[Subcomponent == "LtoS", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ```{r vel-diff-art-trial-line-stol, echo = FALSE, fig.height = 4}
-p_vel_diff_art_trial_stol <- ggplot(data = vel_diff_art_trial[Subcomponent == "StoL"], aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
-  geom_line() +
-  geom_point() +
-  facet_wrap(SubNr ~ .) + 
-  labs(x = "Trial", y = "Difference", subtitle = "KV-Diff: Articulation/Staccato to Legato") + scale_x_continuous(breaks=seq(1,8,1))
-p_vel_diff_art_trial_stol
+ggline(dt_vel_diff_art[Subcomponent == "StoL", .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", facet.by = "SubNr", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,8,1))
 ```
 
 ## 4. Trial by trial - group{#vel_diff_art_group_trial}
@@ -569,7 +540,7 @@ p_vel_diff_art_trial_stol
 
 ```{r vel-diff-art-trial-all, echo = FALSE}
 # Group mean
-vel_diff_art_trial_all <- vel_diff_art_trial[, .(N = .N, Mean = mean(Mean), SD = sd(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent, TrialNr)]
+vel_diff_art_trial_all <- vel_diff_art_trial[Subcomponent == "LtoS" | Subcomponent == "StoL", .(N = .N, Mean = mean(Mean), SD = sd(Mean), SEM = sd(Mean)/sqrt(.N)), by = .(Condition, Skill, Subcomponent, TrialNr)]
 vel_diff_art_trial_all
 ```
 
@@ -578,51 +549,45 @@ vel_diff_art_trial_all
 - Error bars show SEM of the mean
 
 ```{r vel-diff-art-trial-all-line-ltos, echo = FALSE}
-ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_diff_art_trial[Subcomponent == "LtoS"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Legato to Staccato") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks=seq(1,8,1))
 ```
 
 ```{r vel-diff-art-trial-all-line-stol, echo = FALSE}
-ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
-  scale_x_continuous(breaks=seq(1,8,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+ggline(vel_diff_art_trial[Subcomponent == "StoL"], x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Difference", title = "KV-Diff: Articulation/Staccato to Legato") +
+  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks=seq(1,8,1))
 ```
 
 ## Dynamics{#sequence_dyn}
-```{r seq-dyn, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq-dyn, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
 vel_dyn_seq <- dt_vel_dyn[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
 ggline(vel_dyn_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Note", ylab = "", title = "KV: Dynamics") +
-  scale_x_continuous(breaks=seq(1,67,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,67,1))
 
 vel_diff_dyn_seq <- dt_vel_diff_dyn[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
 ggline(vel_diff_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "", title = "KV-Diff: Dynamics") +
-  scale_x_continuous(breaks=seq(1,66,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,66,1))
 ```
 
 ## Articulation{#sequence_art}
-```{r seq-art, fig.width = 10, fig.height = 2, echo = FALSE}
+```{r seq-art, fig.width = 9, fig.height = 3, echo = FALSE}
 # For each individual
 vel_art_seq <- dt_vel_art[, .(N = .N, Mean = mean(Velocity), SD = sd(Velocity)), by = .(SubNr, Condition, Skill, RowNr)]
 
 ggline(vel_art_seq, x = "RowNr", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Note", ylab = "", title = "KV: Articulation") +
-  scale_x_continuous(breaks=seq(1,67,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,67,1))
 
 vel_diff_art_seq <- dt_vel_diff_art[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Condition, Skill, Interval)]
 
 ggline(vel_diff_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "", title = "KV-Diff: Articulation") +
-  scale_x_continuous(breaks=seq(1,66,1)) +
-  theme_pubr(base_size = 20, base_family = "Helvetica Neue LT Std 57 Condensed") +
-  theme(legend.position = "bottom")
+  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+  scale_x_continuous(breaks = seq(1,66,1))
 ```
